tests/fixtures/invalid/pow_bool_list_int.py
# Cannot call pow() with Bool, List[int], Int
x = pow(True, [1, 2, 3], 1)
